--- a/RoboticsManual/cpppr.tex
+++ b/RoboticsManual/cpppr.tex
@@ -60,3 +60,18 @@ Zdrojový kód je tentokrát pro desku \hyperref[alks:nano]{Arduino nano}
 
 \lstinputlisting{priklady_c/lorris_data.cpp}
 
+\label{prog:vnh2sp30} \label{prog:knihovna} 
+\subsection{Řízení motorů s použitím VNH2SP30 -- základní} 
+
+Příklad ukazuje jednoduché řízení silnějších motorů pomocí přídavné 
+desky\footnote{\url{http://www.instructables.com/id/Monster-Motor-Shield-VNH2SP30}
+	} k~deskám Arduino uno nebo Arduino mega  s dvěma \hyperref[driver]{drivery}
+  \hyperref[vnh2sp30]{vnh2sp30}. \index{vnh2sp30} Zároveň se jedná o pěkný příklad využití \hyperref[knihovna]{knihovny}. Zde se knihovna jmenuje {\tt vnh2sp30.h} a je ke stažení 
+  \href{https://github.com/RoboticsBrno/RoboticsBrno-guides/tree/RoboticsManual/RoboticsManual/priklady_c}{zde}.
+%Takové přídavné desce se také říká shield.
+
+\lstinputlisting{priklady_c/motors_vnh.cpp}
+
+
+
+
