--- a/RoboticsManual/prilohy.tex
+++ b/RoboticsManual/prilohy.tex
@@ -119,5 +119,6 @@ Sběrnice - USART/UART, IIC, SPI, další?
 
 % - verze jako poslední příloha 
 % součástky: tlačítko včetně zapojení, barevný senzor 
+%seznam literatury 
 
 
