--- a/RoboticsManual/software.tex
+++ b/RoboticsManual/software.tex
@@ -21,7 +21,7 @@
   
  Video s krátkým představením Lorris: \url{http://www.youtube.com/watch?v=LkmFn40BbX8}.
  
-  \hyperref[prog:lorris]{Příklad} posílání dat pro Lorris. \label{lorris}
+  \hyperref[prog:lorris]{Příklad} posílání dat pro Lorris.
  
 \section{\LaTeX} 
 
