--- a/RoboticsManual/cpppr.tex
+++ b/RoboticsManual/cpppr.tex
@@ -58,6 +58,9 @@ Zdrojový kód je tentokrát pro desku \hyperref[alks:nano]{Arduino nano}
  umístěnou na desce \hyperref[alks]{ALKS} a používá knihovny
 {\tt LearningKit.h}  a  {\tt LearningKit\_nano.h}. 
 
+Poznámka: pokud chceme data posílat místo Analyzéru do terminálu, použijeme místo funkce {\tt Serial.write()}
+funkci {\tt Serial.print()} nebo {\tt Serial.println()}. Rozdíl je v tom, že funkce {\tt Serial.write()} posílá byty \uv{tak jak jsou}, zatímco funkce {\tt Serial.print()} převádí jednotlivé byty na řetězce, které představují posílaná čísla -- vyzkoušejte. \index{Serial.print()} \index{Serial.println()} \index{Serial.write()}
+
 \lstinputlisting{priklady_c/lorris_data.cpp}
 
 \label{prog:vnh2sp30} \label{prog:knihovna} 
