--- a/RoboticsManual/motory.tex
+++ b/RoboticsManual/motory.tex
@@ -97,6 +97,17 @@ Zapojení desky ALKS je \href{https://github.com/RoboticsBrno/ArduinoLearningKit
 Zapojení pinů desky ALKS \href{https://github.com/RoboticsBrno/ArduinoLearningKitStarter/blob/master/docs/pinout.pdf}{zde}. 
 
 
+\label{hcsr04} \subsection{Ultrazvukový senzor HC-SR04}
+
+Ultrazvukový senzor {\bf HC-SR04}\footnote{\url{https://www.sparkfun.com/products/13959}} \index{HC-SR04} je cenově dostupný a běžně používaný při amatérské stavbě robotů. \index{senzor!ultrazvukový}
+\index{ultrazvukový senzor} 
+Jeho zapojení a oživení je 
+  \href{https://randomnerdtutorials.com/complete-guide-for-ultrasonic-sensor-hc-sr04/}{zde}.
+
+
+
+
+%lit: http://www.instructables.com/id/Simple-Arduino-and-HC-SR04-Example/
 
 \subsection{Bluetooth}
 
