--- a/RoboticsManual/zacatek.tex
+++ b/RoboticsManual/zacatek.tex
@@ -132,7 +132,7 @@ Instalujte podobně jako každý jiný program, stahujte zde: \url{https://code.
 přeložit tak, aby ho čip pochopil a~taky ho do čipu umí nahrát. 
 Instalace podle návodu zde: \url{http://docs.platformio.org/en/latest/ide/vscode.html\#installation}
 
-\subsubsection{Založit nový projekt}
+\label{vsc:newproject} \subsubsection{Založit nový projekt}
 
 Program (ne)píšete jen do jednoho souboru, ale aby vše fungovalo, potřebujete povícero dalších souborů, které dohromady tvoří tzv. {\bf projekt}\index{projekt}.
 Tyto soubory jsou mezi sebou hodně provázané a~navíc vázané na konkrétní místo uložení, 
