RoboticsManual: add note for servo

--- a/RoboticsManual/prilohy.tex
+++ b/RoboticsManual/prilohy.tex
@@ -120,5 +120,7 @@ Sběrnice - USART/UART, IIC, SPI, další?
 % - verze jako poslední příloha 
 % součástky: tlačítko včetně zapojení, barevný senzor 
 %seznam literatury 
+% jak přesně funguje funkce map 
+% otestovat řízení serva a zkontrolovat piny GND a data 
 
 
